--- a/finalworkshop/src/main/webapp/resources/fonts/flaticon/font/flaticon.html
+++ b/finalworkshop/src/main/webapp/resources/fonts/flaticon/font/flaticon.html
@@ -33,7 +33,7 @@
         font: inherit;
         vertical-align: baseline;
     }
-    /* HTML5 display-role reset for older browsers */
+    /* HTML5 display-user reset for older browsers */
     article, aside, details, figcaption, figure, 
     footer, header, hgroup, menu, nav, section {
         display: block;
